--- a/partials/footer.html
+++ b/partials/footer.html
@@ -15,9 +15,9 @@
     <div class="categoria">
       <h3>PRODUTOS</h3>
       <ul>
-        <li><a href="../views/carrinho.html">Calçados</a></li>
-        <li><a href="../views/carrinho.html">Blusas</a></li>
-        <li><a href="../views/carrinho.html">Calças</a></li>
+        <li><a href="../views/carrinho.html"  target="_blank">Calçados</a></li>
+        <li><a href="../views/carrinho.html"  target="_blank">Blusas</a></li>
+        <li><a href="../views/carrinho.html"  target="_blank">Calças</a></li>
       </ul>
     </div>
 
@@ -39,8 +39,8 @@
       <h3>INFORMAÇÕES</h3>
       <ul>
         <li><a href="../views/about.html">Sobre nos</a></li>
-        <li><a href="../views/desenvolvimento.html">Carreiras</a></li>
-        <li><a href="../views/desenvolvimento.html">Imprensa</a></li>
+        <li><a href="../views/desenvolvimento.html"  target="_blank">Carreiras</a></li>
+        <li><a href="../views/desenvolvimento.html"  target="_blank">Imprensa</a></li>
       </ul>
     </div>
 
