--- a/partials/header.html
+++ b/partials/header.html
@@ -10,58 +10,44 @@
 </head>
 <body>
     <header class="header">
-        <div class="h-titulo"><p>Titulo do projeto</p></div>
-
-        <div class="h-medio">
-            <div class="h-navybar">
-                <ul class="nav-list">
-                    <li class="nav-item"><a href="../views/home.html">Home</a></li>
-                    <li class="nav-item"><a href="../views/carrinho.html">Produtos</a></li>
-                    <li class="nav-item"><a href="../views/about.html">Sobre</a></li>
-                    <li class="nav-item"><a href="../views/contact.html">Contato</a></li>
-                </ul>
-            </div>
-            <div class="right-side">
-                <div class="search">
-                    <input type="text" placeholder="Procurar">
-                </div>
-                <div class="icons-header">
-                    <div class="icon-right-site"> 
-                        <a href="../views/desenvolvimento.html">
-                            <ion-icon name="person-outline"></ion-icon>
-                        </a>
-                       
-                    </div>
-                
-                    <div class="icon-right-site">
-                        <a href="../views/desenvolvimento.html">
-                            <ion-icon name="star-outline"></ion-icon>
-                        </a>
-                       
-                    </div>
-                
-                    <div class="icon-right-site">
-                        <a href="../views/desenvolvimento.html">
-                            <ion-icon name="cart-outline"></ion-icon>
-                        </a>
-                        
-                    </div>
-                </div>
-
-            </div>
-
-            
-            </div>
-
-
-        <div class="h-cadastro"><a href="../views/contact.html">
-            Entre para o clube
-
-        </a>
+        <div class="h-titulo">
+          <p>Sport Center Soul</p>
         </div>
-
-
-    </header>
+    
+        <div class="h-medio">
+          <div class="h-navybar">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="../index.html">Home</a></li>
+              <li class="nav-item"><a href="../views/carrinho.html">Produtos</a></li>
+              <li class="nav-item"><a href="../views/about.html">Sobre</a></li>
+              <li class="nav-item"><a href="../views/contact.html">Contato</a></li>
+            </ul>
+          </div>
+          <div class="right-side">
+            <div class="search">
+              <input type="text" placeholder="Procurar">
+            </div>
+    
+            <div class="icons-header">
+              <div class="icon-right-site">
+                <a href="../views/desenvolvimento.html"> <ion-icon name="person-outline"></ion-icon> </a>
+              </div>
+    
+              <div class="icon-right-site">
+                <a href="../views/desenvolvimento.html"><ion-icon name="star-outline"></ion-icon> </a>
+              </div>
+    
+              <div class="icon-right-site">
+                <a href="../views/desenvolvimento.html"><ion-icon name="cart-outline"></ion-icon> </a>
+              </div>
+            </div>
+          </div>
+    /    </div>
+    
+        <div class="h-cadastro">
+          <a href="../views/contact.html">Entre para o clube</a>
+        </div>
+      </header>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
