--- a/views/carrinho.html
+++ b/views/carrinho.html
@@ -486,7 +486,8 @@
 
     <iframe src="../partials/footer.html" frameborder="0" height="150px" width="100%"></iframe>
     <script src="../js/categorias.js"></script>
-    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
     
 </html>
