--- a/views/contact.html
+++ b/views/contact.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
     <link rel="shortcut icon" href="../images/sports.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="../style/reset.css"> -->
-    <link rel="stylesheet" href="../style/contact.css">
+    <link rel="stylesheet" href="../style/reset.css">
     <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/contact.css">
     <link rel="stylesheet" href="../style/footer.css">
     
       
@@ -17,44 +17,42 @@
 <body Style="background-color: #f7f7f7;">
   <!--Head-->
   <header class="header">
-    <div class="h-titulo">
-      <p>Sport Center Soul</p>
-    </div>
+    <div class="h-titulo"><p>Sport Center Soul</p></div>
 
     <div class="h-medio">
-      <div class="h-navybar">
-        <ul class="nav-list">
-          <li class="nav-item"><a href="../index.html">Home</a></li>
-          <li class="nav-item"><a href="../views/carrinho.html">Produtos</a></li>
-          <li class="nav-item"><a href="../views/about.html">Sobre</a></li>
-          <li class="nav-item"><a href="../views/contact.html">Contato</a></li>
-        </ul>
-      </div>
-      <div class="right-side">
-        <div class="search">
-          <input type="text" placeholder="Procurar">
+        <div class="h-navybar">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="../index.html">Home</a></li>
+                <li class="nav-item"><a href="../views/carrinho.html">Produtos</a></li>
+                <li class="nav-item"><a href="../views/about.html">Sobre</a></li>
+                <li class="nav-item"><a href="../views/contact.html">Contato</a></li>
+            </ul>
         </div>
+        <div class="right-side">
+            <div class="search">
+                <input type="text" placeholder="Procurar">
+            </div>
 
-        <div class="icons-header">
-          <div class="icon-right-site">
-            <a href="../views/desenvolvimento.html"> <ion-icon name="person-outline"></ion-icon> </a>
-          </div>
-
-          <div class="icon-right-site">
-            <a href="../views/desenvolvimento.html"><ion-icon name="star-outline"></ion-icon> </a>
-          </div>
-
-          <div class="icon-right-site">
-            <a href="../views/desenvolvimento.html"><ion-icon name="cart-outline"></ion-icon> </a>
-          </div>
+            <div class="icons-header">
+                <div class="icon-right-site"> 
+                    <a href="../views/desenvolvimento.html"> <ion-icon name="person-outline"></ion-icon>  </a>
+                    </div>
+            
+                <div class="icon-right-site">
+                    <a href="../views/desenvolvimento.html"><ion-icon name="star-outline"></ion-icon> </a>
+                   </div>
+            
+                <div class="icon-right-site">
+                    <a href="../views/desenvolvimento.html"><ion-icon name="cart-outline"></ion-icon> </a>                
+                </div>
+            </div>
+        </div>      
         </div>
-      </div>
-/    </div>
 
     <div class="h-cadastro">
       <a href="../views/contact.html">Entre para o clube</a>
     </div>
-  </header>
+</header>   
 <!--Fomulario-->
        
         <div class="content">      
