--- a/views/desenvolvimento.html
+++ b/views/desenvolvimento.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERROR</title>
+    <link rel="stylesheet" href="../style/reset.css">
     <link rel="stylesheet" href="../style/contact.css">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/footer.css">
@@ -47,7 +48,7 @@
         </div>
 
     <div class="h-cadastro">
-      <a href="#">Entre para o clube</a>
+      <a href="../views/contact.html">Entre para o clube</a>
     </div>
 </header>  
 <!--Fomulario-->
